--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -1066,6 +1066,24 @@
           </div>
         </article>             
 
+                   <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>What's the Question?</h3>
+              <p>Fill in the board prior to class using statements appropriate for your students’ level (<a href="https://github.com/Outreach360-Inc/games/blob/main/example-whats-the-question.jpg?raw=true" target="_blank">see example here</a>). Divide the class into teams. Pick a square (e.g., “Where? 300”) and read the sentence twice. The first student to raise their hand and form the matching question wins the square and points for their team. Cross off used squares and keep choosing new squares until they’re gone—the highest total wins. <strong>If your students are shy, call on students instead of relying on hand raising.</strong></p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/whats-the-question-icon.png?raw=true"
+                  alt="What's the Question? icon"
+                  loading="lazy" decoding="async">
+              </div>
+                              <a href="https://kami.app/M1t-Z28-arE-nAS" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>             
+
 
             <article class="card">
           <div class="body">
@@ -1905,6 +1923,7 @@
 
 </body>
 </html>
+
 
 
 
