--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -1438,7 +1438,25 @@
               <a href="https://outreach360-inc.github.io/games/a-terrible-day.html" target="_blank"><button class="play-btn">PLAY</button></a>
             </div>
           </div>
-        </article>            
+        </article>     
+
+              <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>The Advice Game</h3>
+              <p>A board game to practice advice structures such as should/shouldn't, ought to, imperatives, it would be a good idea if, if I were you, you had better, you'll have to, why don't you, you could always, etc. Each space on the board comes with a randomized prompt. The game is loaded with 1000+ possible prompts, so it can be played more than once. Great for grammar and speaking practice.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/advice-game-icon.png?raw=true"
+                  alt="The Advice Game icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://outreach360-inc.github.io/games/advice-game.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>        
             
       <article class="card">
           <div class="body">
@@ -1923,6 +1941,7 @@
 
 </body>
 </html>
+
 
 
 
