--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -1453,7 +1453,7 @@
                   alt="The Advice Game icon"
                   loading="lazy" decoding="async">
               </div>
-              <a href="https://outreach360-inc.github.io/games/advice-game.html" target="_blank"><button class="play-btn">PLAY</button></a>
+              <a href="https://outreach360-inc.github.io/games/the-advice-game.html" target="_blank"><button class="play-btn">PLAY</button></a>
             </div>
           </div>
         </article>        
@@ -1941,6 +1941,7 @@
 
 </body>
 </html>
+
 
 
 
