--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -1530,6 +1530,24 @@
             </div>
           </div>
         </article>
+
+             <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Details</h3>
+              <p>Students watch a short video clip and race to produce examples of a target grammar structure from their current or recent units (e.g., past simple/continuous, comparatives, articles, prepositions, quantifiers, relative clauses, or reported speech). They can either spot and jot exact phrases from the clip or write original sentences about what they see using the target form. After playing, award 1 point for a correct phrase, 3–5 for a correct full sentence. Highest total wins. Great for grammar and listening practice.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/details-icon.png?raw=true"
+                  alt="Details icon"
+                  loading="lazy" decoding="async">
+              </div>
+                 <p style="color: #ff6729;" align="center"><strong>YOU WILL NEED TO FIND YOUR OWN MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>
                   
             
                   <article class="card">
@@ -1941,6 +1959,7 @@
 
 </body>
 </html>
+
 
 
 
