--- a/game-zone-hh5-6.html
+++ b/game-zone-hh5-6.html
@@ -816,6 +816,25 @@
           </div>
         </article>
 
+
+                    <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>The Bragging Game</h3>
+              <p>A quick escalation activity for comparatives/superlatives and creativity. One student says a simple sentence (e.g., “I live in a house.”); the next “brags” with a bigger claim on the same topic (e.g., “I live in a bigger house.”). Keep topping each other until someone stalls, then switch topics. Great for practicing comparatives and superlatives.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/bragging-game-icon.png?raw=true"
+                  alt="The Bragging Game icon"
+                  loading="lazy" decoding="async">
+              </div>
+               <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>
+
                    <article class="card">
           <div class="body">
             <div class="text">
@@ -1351,6 +1370,7 @@
 
 </body>
 </html>
+
 
 
 
