--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -1422,6 +1422,24 @@
           </div>
         </article>
 
+                  <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>The Bragging Game</h3>
+              <p>A quick escalation activity for comparatives/superlatives and creativity. One student says a simple sentence (e.g., “I live in a house.”); the next “brags” with a bigger claim on the same topic (e.g., “I live in a bigger house.”). Keep topping each other until someone stalls, then switch topics. <strong>Variation: use as…adjective…as… </strong> (e.g., “as clever as a fox” → “as intelligent as Albert Einstein”). Great for practicing comparatives and superlatives.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/bragging-game-icon.png?raw=true"
+                  alt="The Bragging Game icon"
+                  loading="lazy" decoding="async">
+              </div>
+               <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>
+
        <article class="card">
           <div class="body">
             <div class="text">
@@ -1959,6 +1977,7 @@
 
 </body>
 </html>
+
 
 
 
