--- a/game-zone-hh5-6.html
+++ b/game-zone-hh5-6.html
@@ -817,6 +817,7 @@
         </article>
 
 
+
                     <article class="card">
           <div class="body">
             <div class="text">
@@ -867,6 +868,24 @@
                   loading="lazy" decoding="async">
               </div>
               <a href="https://play.freerice.com/categories/english-grammar?level=1" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
+                          <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Speculation</h3>
+              <p>Give a target verb you’re covering in class (e.g., like, have) and the model “I think you ___.” Students make a guess about a classmate (e.g., “I think you like chocolate”). The classmate confirms true/false. Correct guesses earn 1 point; first to 5 wins. <strong>Variation: use sentence starters to hit specific grammar</strong> (past: “I think you ate…”, present perfect: “I think you’ve…”, future: “I think you’ll…”). Great for grammar, speaking, and listening.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/speculation-icon.png?raw=true"
+                  alt="Speculation icon"
+                  loading="lazy" decoding="async">
+              </div>
+                 <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
             </div>
           </div>
         </article>
@@ -1370,6 +1389,7 @@
 
 </body>
 </html>
+
 
 
 
