--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -1514,6 +1514,24 @@
           </div>
         </article>
 
+              <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Speculation</h3>
+              <p>Give a target verb you’re covering in class (e.g., like, have) and the model “I think you ___.” Students make a guess about a classmate (e.g., “I think you like chocolate”). The classmate confirms true/false. Correct guesses earn 1 point; first to 5 wins. <strong>Variation: use sentence starters to hit specific grammar</strong> (past: “I think you ate…”, present perfect: “I think you’ve…”, future: “I think you’ll…”). Great for grammar, speaking, and listening.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/speculation-icon.png?raw=true"
+                  alt="Speculation icon"
+                  loading="lazy" decoding="async">
+              </div>
+                 <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>
+
                <article class="card">
           <div class="body">
             <div class="text">
@@ -1977,6 +1995,7 @@
 
 </body>
 </html>
+
 
 
 
