--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -442,7 +442,7 @@
           <div class="body">
             <div class="text">
               <h3>Never Have I Ever</h3>
-              <p>A quick way to practice the <strong>present perfect simple</strong>. Students take turns stating <strong>“I have never + past participle”</strong> (e.g., “I have never visited the USA”). Everyone starts with five lives (five fingers); if you have done it, put a finger down. Last player with a life left wins. <strong>Extension: when a student loses a life, require one brief past simple detail (e.g., “I went to Florida when I was twelve”) to highlight the contrast.</strong></p>
+              <p>A quick way to practice the <strong>present perfect simple</strong>. Students take turns stating <strong>“I have never + past participle”</strong> (e.g., “I have never visited the USA”). Everyone starts with five lives (five fingers); if you have done it, put a finger down. Last player with a life left wins. <strong>Extension: when a student loses a life, require one brief past simple detail (e.g., “I went to Florida when I was twelve”) to highlight the contrast.</strong> Great for grammar.</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -2157,6 +2157,7 @@
 
 </body>
 </html>
+
 
 
 
