--- a/game-zone-hh5-6.html
+++ b/game-zone-hh5-6.html
@@ -854,6 +854,24 @@
           </div>
         </article>            
 
+                <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Never Have I Ever</h3>
+              <p>A quick way to practice the <strong>present perfect simple</strong>. Students take turns stating <strong>“I have never + past participle”</strong> (e.g., “I have never visited the USA”). Everyone starts with five lives (five fingers); if you have done it, put a finger down. Last player with a life left wins. <strong>Extension: when a student loses a life, require one brief past simple detail (e.g., “I went to Florida when I was twelve”) to highlight the contrast.</strong> Great for grammar.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/never-ever-icon.png?raw=true"
+                  alt="Never Have I Ever icon"
+                  loading="lazy" decoding="async">
+              </div>
+ <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>       
+
       <article class="card">
           <div class="body">
             <div class="text">
@@ -1389,6 +1407,7 @@
 
 </body>
 </html>
+
 
 
 
