--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -512,11 +512,11 @@
           </div>
         </article>
 
-              <article class="card">
+   <article class="card">
           <div class="body">
             <div class="text">
               <h3>Perfect Match</h3>
-                            <p>A playful pair game where students try to match their partner’s answers. Spin for a prompt (e.g., “If they won the lottery, what would they buy first?”). One partner writes their own answer; the other writes what they think their partner will say. <strong>Students must write in full sentences. <strong>Reveal and compare—award 1 point for an exact/close match. Play a few rounds, then switch to a new pair. Great for fun grammar practice with mixed tenses.</p>
+                            <p>A playful pair game where students try to match their partner’s answers. Spin for a prompt (e.g., “If they won the lottery, what would they buy first?”). One partner writes their own answer; the other writes what they think their partner will say. <strong>Students must write in full sentences. </strong>Reveal and compare—award 1 point for an exact/close match. Play a few rounds, then switch to a new pair. Great for fun grammar practice with mixed tenses.</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -525,11 +525,11 @@
                   alt="Perfect Match icon"
                   loading="lazy" decoding="async">
               </div>
-                 <a href="https://outreach360-inc.github.io/games/perfect-match.html" target="_blank"><button class="play-btn">PLAY</button></a>
+              <a href="https://outreach360-inc.github.io/games/perfect-match.html" target="_blank"><button class="play-btn">PLAY</button></a>
             </div>
           </div>
         </article>
-
+            
               <article class="card">
           <div class="body">
             <div class="text">
@@ -2175,6 +2175,7 @@
 
 </body>
 </html>
+
 
 
 
