--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -1463,6 +1463,24 @@
           </div>
         </article>             
 
+                <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Bananas</h3>
+              <p>One student is the Bananas player and may only say “bananas.” The others fire questions to try to make them smile or slip—if the Bananas student smiles, laughs, or says anything besides “bananas,” the asker earns a point. Switch the Bananas role every 1–2 minutes; most points at the end wins. Keep questions tied to your target grammar/topic if you want extra practice. Great for questions and a laugh!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/bananas-icon.png?raw=true"
+                  alt="Bananas icon"
+                  loading="lazy" decoding="async">
+              </div>
+                <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>    
+
                               <article class="card">
           <div class="body">
             <div class="text">
@@ -2177,6 +2195,7 @@
 
 </body>
 </html>
+
 
 
 
