--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -381,6 +381,25 @@
           </div>
         </article>
 
+
+             <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Roll an Affix</h3>
+              <p>A quick morphology game for practicing prefixes and suffixes. On the board, map each number to affixes (e.g., 1 → un-/-ful, 2 → il-/in-/im-/-less, 3 → pre-/post-/-ment, 4 → dis-/-ness, 5 → re-/-ance/-ence, 6 → mis-/-sion/-tion/-xion). A student rolls, says a word with that affix, then partners alternate new words using the same affix; if someone stalls, the other wins the round. First to 3–5 points wins; switch partners and repeat. <strong>Variation: add a sentence challenge (use the word in a clear sentence) or require part-of-speech labeling.</strong></p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/roll-affix-icon.png?raw=true"
+                  alt="Roll an Affix icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://freeonlinedice.com" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
       
       <article class="card">
           <div class="body">
@@ -2195,6 +2214,7 @@
 
 </body>
 </html>
+
 
 
 
