--- a/game-zone-hh1-4.html
+++ b/game-zone-hh1-4.html
@@ -922,6 +922,25 @@
           </div>
         </article>
 
+
+              <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Guess the Number</h3>
+            <p>A very simple game to practice using numbers. One student thinks of a number between one and ten, a hundred, a thousand, etc. The others take turns guessing the number. The student who chose the number simply responds with “higher” or “lower” until someone guesses correctly.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/guess-number-icon.png?raw=true"
+                  alt="Guess the Number icon"
+                  loading="lazy" decoding="async">
+              </div>
+               <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>
+
         <article class="card">
           <div class="body">
             <div class="text">
@@ -1135,6 +1154,7 @@
 
 </body>
 </html>
+
 
 
 
