--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -1400,7 +1400,23 @@
         </article>
 
 
-            
+              <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Things to Do with a Potato</h3>
+            <p>Show a potato (or another random object) or write the word on the board. Set a timer and ask students to come up with a list of as many unconventional uses for it as they can (e.g., paperweight, weapon, pen holder, smartphone dock). Award points for uniqueness or for the longest list. Then play with another random object.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/things-to-do-potato-icon.png?raw=true"
+                  alt="Things to Do with a Potato icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>
 
 
       <article class="card">
@@ -2049,6 +2065,7 @@
 
 </body>
 </html>
+
 
 
 
