--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -589,6 +589,24 @@
           </div>
         </article>
 
+                   <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Fortunately / Unfortunately</h3>
+              <p>Start a story and have learners alternately advancing the story using the adverbs fortunately and unfortunately (e.g., Teacher: Yesterday my car was stolen. Student A: Fortunately, it was insured. Student B: Unfortunately, the insurance company went bankrupt. Student C: Fortunately, my grandfather said he would buy me a new car. Etc.). Great for creativity and speaking.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/fortunately-unfortunately-icon.png?raw=true"
+                  alt="GIF Story icon"
+                  loading="lazy" decoding="async">
+              </div>
+               <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>
+
             
                          <article class="card">
           <div class="body">
@@ -2065,6 +2083,7 @@
 
 </body>
 </html>
+
 
 
 
