--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -1188,7 +1188,7 @@
           <div class="body">
             <div class="text">
               <h3>Fortunately / Unfortunately</h3>
-              <p>Start a story and have learners alternately advancing the story using the adverbs fortunately and unfortunately (e.g., Teacher: Yesterday my car was stolen. Student A: Fortunately, it was insured. Student B: Unfortunately, the insurance company went bankrupt. Student C: Fortunately, my grandfather said he would buy me a new car. Etc.). Great for creativity and speaking.</p>
+              <p>Start a story and have learners alternately advance the story using the adverbs fortunately and unfortunately (e.g., Teacher: Yesterday my car was stolen. Student A: Fortunately, it was insured. Student B: Unfortunately, the insurance company went bankrupt. Student C: Fortunately, my grandfather said he would buy me a new car. Etc.). Great for creativity and speaking.</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -2271,6 +2271,7 @@
 
 </body>
 </html>
+
 
 
 
