--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -1523,7 +1523,7 @@
               <article class="card">
           <div class="body">
             <div class="text">
-              <h3>Whose Weekend</h3>
+              <h3>Whose Weekend?</h3>
               <p>Each student privately sends the teacher three things they did over the weekend. The teacher reads one list aloud, and the class guesses whose weekend is being described. The student can confirm—or bluff and deny it’s theirs to keep the game going! Continue until all lists have been revealed. Great for practicing the <strong>past simple</strong>, listening carefully for details, and sparking fun conversations.</p>
             </div>
             <div class="art-col">
@@ -2271,6 +2271,7 @@
 
 </body>
 </html>
+
 
 
 
